--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 # SDK Versions
 minSdk = "26"
-targetSdk = "34"
-compileSdk = "34"
+targetSdk = "35"
+compileSdk = "35"
 
 # Dependencies
-kotlin = "2.0.0"
-kspPlugin = "2.0.0-1.0.21"
+kotlin = "2.0.21"
+kspPlugin = "2.0.21-1.0.25"
 
 # KMP
-coroutines = "1.8.1"
+coroutines = "1.9.0"
 
-kmp-viewmodel = "1.0.0-BETA-3"
-kmp-nativecoroutines = "1.0.0-ALPHA-31"
-kotlinxDateTime = "0.6.0"
-koin = "3.6.0-Beta4"
-konnection = "1.3.1"
+kmp-viewmodel = "1.0.0-BETA-7"
+kmp-nativecoroutines = "1.0.0-ALPHA-37"
+kotlinxDateTime = "0.6.1"
+koin = "4.1.0-Beta1"
+konnection = "1.4.3"
 # experimental Ktor update to fix memAllocs found in Instruments Leaks on iOS
-ktor = "3.0.0-beta-1"
-multiplatformSettings = "1.1.1"
+ktor = "3.0.1"
+multiplatformSettings = "1.2.0"
 napier = "2.7.1"
 sqlDelight = "2.0.2"
-turbine = "1.1.0"
+turbine = "1.2.0"
 
 # Tools
-androidGradle = "8.5.0"
-bugfender = "3.2.0"
+androidGradle = "8.7.0"
+bugfender = "3.3.3"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
 firebaseCrashlyticsGradle = "3.0.1"
-firebaseBOM = "33.1.0"
+firebaseBOM = "33.6.0"
 googleServices = "4.4.2"
 gradleVersions = "0.51.0"
 junit = "4.13.2"
@@ -39,35 +39,35 @@ timber = "5.0.1"
 
 # AndroidX
 # https://developer.android.com/jetpack/androidx/versions
-activity = "1.9.0"
+activity = "1.9.3"
 appcompat = "1.7.0"
-constraintLayout = "2.1.4"
-coreKtx = "1.13.1"
-fragment = "1.7.1"
-lifecycle = "2.8.1"
-navigation = "2.7.7"
-material = "1.11.0"
+constraintLayout = "2.2.0"
+coreKtx = "1.15.0"
+fragment = "1.8.5"
+lifecycle = "2.8.7"
+navigation = "2.8.4"
+material = "1.13.0-alpha07"
 percentLayout = "1.0.0"
 preference = "1.2.1"
 recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
-work = "2.10.0-alpha02"
+work = "2.9.1"
 secretsGradle = "2.0.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
-compose = "1.7.0-beta04"
-composeMaterial3 = "1.3.0-beta04"
-composeNavigation = "2.8.0-beta04"
-composeMaps = "5.0.4"
+compose = "1.7.5"
+composeMaterial3 = "1.3.1"
+composeNavigation = "2.8.4"
+composeMaps = "6.2.1"
 
 # Google
 accompanistSwipe = "0.35.1-alpha"
-googleBilling = "7.0.0"
+googleBilling = "7.1.1"
 gson = "2.11.0"
 permissionsDispatcher = "4.9.1"
-playMaps = "18.2.0"
+playMaps = "19.0.0"
 playLocation = "21.3.0"
 
 # Third-party
@@ -77,8 +77,8 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-9"
-nrservices = "0.1.2-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-10"
+nrservices = "0.1.3-SNAPSHOT"
 
 [libraries]
 # 1st party libs
